// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorListDrawer component renders a MonitorListDrawer when there are many checks 1`] = `
<ContextProvider
  value={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "match": Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      },
      "staticContext": undefined,
    }
  }
>
  <ContextProvider
    value={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <MonitorListDrawerComponent
      loading={false}
      monitorDetails={
        Object {
          "error": Object {
            "message": "Get https://expired.badssl.com: x509: certificate has expired or is not yet valid",
            "type": "io",
          },
          "monitorId": "bad-ssl",
        }
      }
      summary={
        Object {
          "monitor_id": "foo",
          "state": Object {
            "monitor": Object {
              "type": "http",
            },
            "summary": Object {
              "down": 0,
              "up": 1,
            },
            "summaryPings": Array [
              Object {
                "docId": "foo",
                "monitor": Object {
                  "duration": Object {
                    "us": 121,
                  },
                  "id": "foo",
                  "ip": "127.0.0.1",
                  "name": undefined,
                  "status": "up",
                  "type": "icmp",
                },
                "timestamp": "121",
              },
              Object {
                "docId": "foo-0",
                "monitor": Object {
                  "duration": Object {
                    "us": 100000,
                  },
                  "id": "foo",
                  "ip": "127.0.0.1",
                  "name": undefined,
                  "status": "down",
                  "type": "icmp",
                },
                "timestamp": "0",
              },
              Object {
                "docId": "foo-1",
                "monitor": Object {
                  "duration": Object {
                    "us": 1,
                  },
                  "id": "foo",
                  "ip": "127.0.0.2",
                  "name": undefined,
                  "status": "up",
                  "type": "icmp",
                },
                "timestamp": "1",
              },
              Object {
                "docId": "foo-2",
                "monitor": Object {
                  "duration": Object {
                    "us": 2,
                  },
                  "id": "foo",
                  "ip": "127.0.0.3",
                  "name": undefined,
                  "status": "down",
                  "type": "icmp",
                },
                "timestamp": "2",
              },
            ],
            "timestamp": "123",
            "url": Object {
              "domain": "expired.badssl.com",
              "full": "https://expired.badssl.com",
            },
          },
        }
      }
    />
  </ContextProvider>
</ContextProvider>
`;

exports[`MonitorListDrawer component renders a MonitorListDrawer when there is only one check 1`] = `
<ContextProvider
  value={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "location": Object {
        "hash": "",
        "key": "TestKeyForTesting",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "match": Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      },
      "staticContext": undefined,
    }
  }
>
  <ContextProvider
    value={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "TestKeyForTesting",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "TestKeyForTesting",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <MonitorListDrawerComponent
      loading={false}
      monitorDetails={
        Object {
          "error": Object {
            "message": "Get https://expired.badssl.com: x509: certificate has expired or is not yet valid",
            "type": "io",
          },
          "monitorId": "bad-ssl",
        }
      }
      summary={
        Object {
          "monitor_id": "foo",
          "state": Object {
            "monitor": Object {
              "type": "http",
            },
            "summary": Object {
              "down": 0,
              "up": 1,
            },
            "summaryPings": Array [
              Object {
                "docId": "foo",
                "monitor": Object {
                  "duration": Object {
                    "us": 121,
                  },
                  "id": "foo",
                  "ip": "127.0.0.1",
                  "name": undefined,
                  "status": "up",
                  "type": "icmp",
                },
                "timestamp": "121",
              },
            ],
            "timestamp": "123",
            "url": Object {
              "domain": "expired.badssl.com",
              "full": "https://expired.badssl.com",
            },
          },
        }
      }
    />
  </ContextProvider>
</ContextProvider>
`;
